--- a/package.json
+++ b/package.json
@@ -2,13 +2,26 @@
   "name": "react-intersection-observer",
   "version": "0.1.0",
   "description": "Monitor if a component is inside the viewport, using IntersectionObserver API",
-  "main": "index.js",
+  "main": "lib/index.js",
   "author": "Daniel Schmidt",
   "license": "MIT",
+  "keywords": [
+    "react",
+    "component",
+    "viewport",
+    "intersection",
+    "inview"
+  ],
   "scripts": {
+    "build:lib": "NODE_ENV=development babel src --out-dir lib",
+    "build:storybook": "build-storybook --output-dir example",
+    "deploy": "npm run build:storybook && git-directory-deploy --directory example --branch gh-pages",
     "lint": "eslint src/.",
     "precommit": "lint-staged",
-    "pretty": "prettier '{src,tests}/**/*.js' --write --no-semi --single-quote --trailing-comma all"
+    "prepublish": "npm run build:lib",
+    "pretty": "prettier '{src,tests,stories}/**/*.js' --write --no-semi --single-quote --trailing-comma all",
+    "storybook": "start-storybook -p 9000",
+    "test": "eslint src/. && jest"
   },
   "lint-staged": {
     "*.js": [
@@ -36,7 +49,6 @@
     ]
   },
   "dependencies": {
-    "enzyme-to-json": "1.5.1",
     "intersection-observer": "0.2.1"
   },
   "peerDependencies": {
@@ -44,14 +56,17 @@
     "react": "^0.14.0 || ^15.0.0"
   },
   "devDependencies": {
+    "@kadira/storybook": "^2.21.0",
     "babel-cli": "6.24.1",
     "babel-core": "6.24.1",
     "babel-jest": "19.0.0",
     "babel-preset-react-app": "2.2.0",
     "enzyme": "2.8.2",
+    "enzyme-to-json": "1.5.1",
     "eslint": "3.19.0",
     "eslint-config-insilico": "2.1.5",
     "eslint-config-prettier": "1.7.0",
+    "git-directory-deploy": "1.5.1",
     "husky": "0.13.3",
     "jest": "19.0.2",
     "lint-staged": "3.4.1",
