Deploy storybook on master

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,13 @@ branches:
   only:
     - master
     - /^greenkeeper-.*$/
-
 deploy:
   local_dir: example
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
   on:
-   tags: true
+   branch: master
 notifications:
   slack: in2:t4HfbJOtRL7uekgIPh2DUIKb
   email: false
