chore(travis): whitelist greenkeeper branches

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ branches:
   only:
     - master
     - /^greenkeeper-.*$/
+    - /^greenkeeper/.*$/
 deploy:
   local_dir: example
   provider: pages
