--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     ]
   },
   "dependencies": {
-    "intersection-observer": "0.2.1"
+    "intersection-observer": "^0.2.1"
   },
   "peerDependencies": {
     "prop-types": "^15.5.8",
@@ -61,22 +61,22 @@
   },
   "devDependencies": {
     "@kadira/storybook": "^2.21.0",
-    "babel-cli": "6.24.1",
-    "babel-core": "6.24.1",
-    "babel-jest": "19.0.0",
-    "babel-preset-react-app": "2.2.0",
-    "enzyme": "2.8.2",
-    "enzyme-to-json": "1.5.1",
-    "eslint": "3.19.0",
-    "eslint-config-insilico": "2.1.5",
-    "eslint-config-prettier": "1.7.0",
-    "husky": "0.13.3",
-    "jest": "19.0.2",
-    "lint-staged": "3.4.1",
-    "prettier": "1.3.1",
-    "prop-types": "15.5.8",
-    "react": "15.5.4",
-    "react-dom": "15.5.4",
-    "react-test-renderer": "15.5.4"
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-jest": "^19.0.0",
+    "babel-preset-react-app": "^2.2.0",
+    "enzyme": "^2.8.2",
+    "enzyme-to-json": "^1.5.1",
+    "eslint": "^3.19.0",
+    "eslint-config-insilico": "^2.1.5",
+    "eslint-config-prettier": "^1.7.0",
+    "husky": "^0.13.3",
+    "jest": "^19.0.2",
+    "lint-staged": "^3.4.1",
+    "prettier": "^1.3.1",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-test-renderer": "^15.5.4"
   }
 }
