--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      "transform-es2015-modules-commonjs"
     ]
   },
   "eslintConfig": {
@@ -53,6 +56,7 @@
     ]
   },
   "dependencies": {
+    "babel-plugin-transform-es2015-modules-commonjs": "6.24.1",
     "intersection-observer": "^0.2.1"
   },
   "peerDependencies": {
@@ -65,6 +69,7 @@
     "babel-core": "^6.24.1",
     "babel-jest": "^20.0.3",
     "babel-preset-react-app": "^3.0.0",
+    "babel-runtime": "6.23.0",
     "enzyme": "^2.8.2",
     "enzyme-to-json": "^1.5.1",
     "eslint": "^3.19.0",
