--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     ]
   },
   "dependencies": {
-    "babel-plugin-transform-es2015-modules-commonjs": "6.24.1"
   },
   "peerDependencies": {
     "prop-types": "^15.5.10",
@@ -67,6 +66,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-jest": "^20.0.3",
+    "babel-plugin-transform-es2015-modules-commonjs": "6.24.1",
     "babel-preset-react-app": "^3.0.0",
     "babel-runtime": "6.23.0",
     "enzyme": "^2.8.2",
