--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-jest": "^20.0.3",
-    "babel-plugin-transform-es2015-modules-commonjs": "6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-preset-react-app": "^3.0.0",
     "babel-runtime": "6.23.0",
     "enzyme": "^2.8.2",
@@ -74,6 +74,7 @@
     "eslint-config-insilico": "^3.0.2",
     "eslint-config-prettier": "^2.1.1",
     "husky": "^0.13.3",
+    "intersection-observer": "^0.2.1",
     "jest": "^20.0.4",
     "lint-staged": "^3.5.0",
     "prettier": "^1.3.1",
