--- a/package.json
+++ b/package.json
@@ -78,28 +78,29 @@
     "react": "^0.14.0 || ^15.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-options": "^3.0.0",
-    "@storybook/react": "^3.0.0",
+    "@storybook/addon-actions": "3.1.2",
+    "@storybook/addon-options": "^3.1.2",
+    "@storybook/react": "^3.1.3",
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-jest": "^20.0.3",
-    "babel-preset-env": "1.5.1",
+    "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "concurrently": "3.4.0",
     "enzyme": "^2.8.2",
     "enzyme-to-json": "^1.5.1",
-    "eslint": "^3.19.0",
-    "eslint-config-insilico": "^3.0.2",
+    "eslint": "^4.0.0",
+    "eslint-config-insilico": "^4.0.0",
     "eslint-config-prettier": "^2.1.1",
     "husky": "^0.13.4",
-    "intersection-observer": "^0.2.1",
+    "intersection-observer": "^0.3.0",
     "jest": "^20.0.4",
-    "lint-staged": "^3.5.1",
-    "prettier": "^1.3.1",
+    "lint-staged": "^3.6.1",
+    "prettier": "^1.4.4",
     "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-test-renderer": "^15.5.4"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-test-renderer": "^15.6.1"
   }
 }
