--- a/package.json
+++ b/package.json
@@ -78,15 +78,15 @@
     "react": "^0.14.0 || ^15.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "3.1.5",
-    "@storybook/addon-options": "^3.1.2",
+    "@storybook/addon-actions": "^3.1.5",
+    "@storybook/addon-options": "^3.1.5",
     "@storybook/react": "^3.1.3",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-jest": "^20.0.3",
-    "babel-preset-env": "1.5.2",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "concurrently": "3.5.0",
     "enzyme": "^2.8.2",
     "enzyme-to-json": "^1.5.1",
