--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dev": "concurrently -k -r 'jest --watch' 'npm run storybook'",
     "lint": "eslint {src,stories,tests}/. ",
     "precommit": "lint-staged",
+    "postcommit": "git reset",
     "prepublish": "npm run build",
     "pretty": "prettier '{src,tests,stories}/**/*.js' --write --no-semi --single-quote --trailing-comma all",
     "storybook": "start-storybook -p 9000",
@@ -78,26 +79,26 @@
     "react": "^0.14.0 || ^15.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.1.5",
-    "@storybook/addon-options": "^3.1.5",
-    "@storybook/react": "^3.1.3",
+    "@storybook/addon-actions": "^3.1.9",
+    "@storybook/addon-options": "^3.1.6",
+    "@storybook/react": "^3.1.9",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-jest": "^20.0.3",
-    "babel-preset-env": "^1.5.2",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "concurrently": "3.5.0",
-    "enzyme": "^2.8.2",
+    "enzyme": "^2.9.1",
     "enzyme-to-json": "^1.5.1",
-    "eslint": "^4.0.0",
-    "eslint-config-insilico": "^4.0.0",
-    "eslint-config-prettier": "^2.1.1",
-    "husky": "^0.14.0",
-    "intersection-observer": "^0.3.0",
+    "eslint": "^4.2.0",
+    "eslint-config-insilico": "^4.1.0",
+    "eslint-config-prettier": "^2.3.0",
+    "husky": "^0.14.3",
+    "intersection-observer": "^0.3.3",
     "jest": "^20.0.4",
-    "lint-staged": "^4.0.0",
-    "prettier": "^1.4.4",
+    "lint-staged": "^4.0.2",
+    "prettier": "^1.5.3",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
