--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "prop-types": "^15.5.10",
-    "react": "^0.14.0 || ^15.0.0"
+    "prop-types": "^15.5.10 || ^16.0.0",
+    "react": "^0.14.0 || ^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.1.9",
