--- a/package.json
+++ b/package.json
@@ -58,15 +58,16 @@
       "<rootDir>/jest-setup.js"
     ]
   },
-  "dependencies": {},
+  "dependencies": {
+    "prop-types": "^15.6.0"
+  },
   "peerDependencies": {
-    "prop-types": "^15.5.10 || ^16.0.0",
-    "react": "^0.14.0 || ^15.0.0 || ^16.0.0"
+    "react": ">=0.15.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.2.11",
-    "@storybook/addon-options": "^3.2.10",
-    "@storybook/react": "^3.2.11",
+    "@storybook/addon-actions": "^3.2.12",
+    "@storybook/addon-options": "^3.2.12",
+    "@storybook/react": "^3.2.12",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-jest": "^21.2.0",
@@ -74,16 +75,16 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "concurrently": "3.5.0",
-    "enzyme": "^3.0.0",
-    "enzyme-adapter-react-16": "^1.0.0",
-    "enzyme-to-json": "^3.0.1",
-    "eslint": "^4.7.2",
-    "eslint-config-insilico": "^5.0.0",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.2",
+    "enzyme-to-json": "^3.1.3",
+    "eslint": "^4.9.0",
+    "eslint-config-insilico": "^5.0.1",
     "husky": "^0.14.3",
     "intersection-observer": "^0.4.0",
-    "jest": "^21.2.0",
+    "jest": "^21.2.1",
     "lint-staged": "^4.2.3",
-    "prettier": "^1.7.0",
+    "prettier": "^1.7.4",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
