--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   ],
   "scripts": {
     "build": "rm -rf lib && npm run build:lib && npm run build:es",
-    "build:es": "BABEL_ENV=es babel src --out-dir  es --ignore __*,*.story.js,*.test.js",
+    "build:es": "BABEL_ENV=es babel src --out-dir es --ignore __*,*.story.js,*.test.js",
     "build:lib": "babel src --out-dir lib --ignore __*,*.story.js,*.test.js",
     "build:storybook": "build-storybook --output-dir example",
     "dev": "concurrently -k -r 'jest --watch' 'npm run storybook'",
     "lint": "eslint {src,stories,tests}/. ",
-    "precommit": "lint-staged",
+    "precommit": "flow && lint-staged",
     "postcommit": "git reset",
     "prepublish": "npm run build",
     "pretty": "prettier '{src,tests,stories}/**/*.js' --write --no-semi --single-quote --trailing-comma all",
@@ -59,7 +59,6 @@
     ]
   },
   "dependencies": {
-    "prop-types": "^15.6.0"
   },
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0 || ^17.0.0"
@@ -80,6 +79,7 @@
     "enzyme-to-json": "^3.1.3",
     "eslint": "^4.9.0",
     "eslint-config-insilico": "^5.0.1",
+    "flow-bin": "^0.57.3",
     "husky": "^0.14.3",
     "intersection-observer": "^0.4.0",
     "jest": "^21.2.1",
