--- a/.flowconfig
+++ b/.flowconfig
@@ -1,5 +1,6 @@
 [ignore]
 <PROJECT_ROOT>/dist/.*
+<PROJECT_ROOT>/lib/.*
 <PROJECT_ROOT>/node_modules/radium*
 <PROJECT_ROOT>/node_modules/babel*
 <PROJECT_ROOT>/node_modules/immutable*
