--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "precommit": "flow && lint-staged",
     "postcommit": "git reset",
     "prepublish": "npm run build",
-    "pretty": "prettier '{src,tests,stories}/**/*.js' --write --no-semi --single-quote --trailing-comma all",
+    "pretty": "prettier '**/*.{js,md,json}' --write",
     "storybook": "start-storybook -p 9000",
     "test": "eslint {src,stories,tests}/. && jest"
   },
@@ -61,28 +61,28 @@
     "react": "^15.0.0 || ^16.0.0 || ^17.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.2.12",
-    "@storybook/addon-options": "^3.2.12",
-    "@storybook/react": "^3.2.12",
+    "@storybook/addon-actions": "^3.2.14",
+    "@storybook/addon-options": "^3.2.14",
+    "@storybook/react": "^3.2.14",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-jest": "^21.2.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "concurrently": "3.5.0",
-    "enzyme": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.0.2",
-    "enzyme-to-json": "^3.1.3",
-    "eslint": "^4.9.0",
+    "enzyme": "^3.1.1",
+    "enzyme-adapter-react-16": "^1.0.4",
+    "enzyme-to-json": "^3.2.2",
+    "eslint": "^4.10.0",
     "eslint-config-insilico": "^5.0.1",
-    "flow-bin": "^0.58.0",
+    "flow-bin": "^0.59.0",
     "flow-copy-source": "^1.2.1",
     "husky": "^0.14.3",
     "intersection-observer": "^0.4.0",
     "jest": "^21.2.1",
-    "lint-staged": "^4.2.3",
-    "prettier": "^1.7.4",
+    "lint-staged": "^4.3.0",
+    "prettier": "^1.8.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-test-renderer": "^16.0.0"
