--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Monitor if a component is inside the viewport, using IntersectionObserver API",
   "main": "lib/index.js",
   "author": "Daniel Schmidt",
+  "typings": "index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/thebuilder/react-intersection-observer"
