feat: include the IntersectionObserverEntry in the output (#158)

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "dev": "concurrently -k -r 'jest --watch' 'yarn run storybook'",
     "lint": "eslint {src,stories}/**/*.js ",
     "prepare": "yarn build",
-    "pretty": "prettier '**/*.{js,md,json,yml,html}' --write",
+    "pretty": "prettier '**/*.{js,ts,tsx,md,json,yml,html}' --write",
     "storybook": "start-storybook -p 9000",
     "test": "jest"
   },
@@ -126,9 +126,9 @@
     "lint-staged": "^8.0.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.15.3",
-    "react": "^16.7.0-alpha",
-    "react-dom": "^16.7.0-alpha",
-    "react-test-renderer": "^16.7.0-alpha",
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1",
+    "react-test-renderer": "^16.8.0-alpha.1",
     "rollup": "^1.0.2",
     "rollup-plugin-babel": "^4.2.0",
     "rollup-plugin-commonjs": "^9.2.0",
