--- a/package.json
+++ b/package.json
@@ -38,10 +38,9 @@
   ],
   "scripts": {
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "build": "rm -rf dist && yarn run build:lib && yarn run build:flow",
+    "build": "rm -rf dist && yarn run build:lib",
     "build:lib": "rollup -c",
     "build:storybook": "build-storybook --output-dir example",
-    "build:flow": "node scripts/create-flow",
     "dev": "concurrently -k -r 'jest --watch' 'yarn run storybook'",
     "lint": "eslint {src,stories}/**/*.js ",
     "prepare": "yarn build",
@@ -51,29 +50,34 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "flow status && lint-staged",
-      "post-commit": "git update-index --again"
+      "pre-commit": "tsc&& lint-staged"
     }
   },
   "lint-staged": {
-    "*.{js,json,css,md,ts}": [
+    "*.{js,json,css,md,ts,tsx}": [
       "prettier --write",
       "git add"
     ],
-    "src/**/*.js": [
+    "src/**/*.{ts,tsx}": [
       "eslint",
-      "jest --findRelatedTests",
-      "flow force-recheck --focus"
+      "jest --findRelatedTests"
     ]
   },
   "eslintConfig": {
     "extends": [
-      "insilico"
+      "react-app"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+      "@typescript-eslint"
     ],
     "settings": {
       "react": {
         "version": "detect"
       }
+    },
+    "rules": {
+      "no-unused-vars": 0
     }
   },
   "jest": {
@@ -91,6 +95,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.2.0",
+    "@types/react": "^16.7.20",
     "invariant": "^2.2.4"
   },
   "peerDependencies": {
@@ -104,24 +109,36 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
     "@storybook/addon-actions": "^4.1.4",
     "@storybook/addon-options": "^4.1.4",
     "@storybook/react": "^4.1.4",
+    "@types/jest": "^23.3.13",
+    "@types/storybook__addon-actions": "^3.4.1",
+    "@types/storybook__addon-links": "^3.3.3",
+    "@types/storybook__react": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^1.1.0",
+    "@typescript-eslint/parser": "^1.1.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.4.2",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "^24.0.0",
     "babel-loader": "^8.0.5",
     "concurrently": "4.1.0",
     "coveralls": "^3.0.2",
     "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-adapter-react-16": "^1.8.0",
     "enzyme-to-json": "^3.3.5",
-    "eslint": "^5.12.0",
-    "eslint-config-insilico": "^6.0.0",
-    "flow-bin": "^0.90.0",
+    "error-overlay-webpack-plugin": "^0.1.6",
+    "eslint": "5.x",
+    "eslint-config-react-app": "^3.0.6",
+    "eslint-plugin-flowtype": "3.2.1",
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-react": "7.x",
     "flow-copy-source": "^2.0.2",
     "husky": "^1.3.1",
     "intersection-observer": "^0.5.1",
-    "jest": "^23.5.0",
+    "jest": "^24.0.0",
     "jest-dom": "^3.0.0",
     "lint-staged": "^8.0.4",
     "npm-run-all": "^4.1.5",
@@ -134,6 +151,8 @@
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-uglify": "^6.0.0"
+    "rollup-plugin-uglify": "^6.0.2",
+    "typescript": "^3.2.4",
+    "typescript-eslint-parser": "^22.0.0"
   }
 }
