--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "module": "dist/react-intersection-observer.esm.js",
   "unpkg": "dist/react-intersection-observer.umd.min.js",
   "author": "Daniel Schmidt",
-  "typings": "index.d.ts",
+  "typings": "dist/index.d.ts",
   "files": [
-    "dist/*",
-    "src/*",
-    "index.d.ts"
+    "dist/*"
   ],
   "repository": {
     "type": "git",
@@ -38,11 +36,11 @@
   ],
   "scripts": {
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "build": "rm -rf dist && yarn run build:lib",
+    "build": "rm -rf dist && yarn run build:lib && tsc",
     "build:lib": "rollup -c",
     "build:storybook": "build-storybook --output-dir example",
     "dev": "concurrently -k -r 'jest --watch' 'yarn run storybook'",
-    "lint": "eslint {src,stories}/**/*.js ",
+    "lint": "eslint . --ext js,ts,tsx",
     "prepare": "yarn build",
     "pretty": "prettier '**/*.{js,ts,tsx,md,json,yml,html}' --write",
     "storybook": "start-storybook -p 9000",
@@ -131,11 +129,10 @@
     "error-overlay-webpack-plugin": "^0.1.6",
     "eslint": "5.x",
     "eslint-config-react-app": "^3.0.6",
-    "eslint-plugin-flowtype": "3.2.1",
+    "eslint-plugin-flowtype": "^3.2.1",
     "eslint-plugin-import": "2.x",
     "eslint-plugin-jsx-a11y": "6.x",
     "eslint-plugin-react": "7.x",
-    "flow-copy-source": "^2.0.2",
     "husky": "^1.3.1",
     "intersection-observer": "^0.5.1",
     "jest": "^24.0.0",
