--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,6 @@
     "module": "esnext",
     "target": "es5",
     "lib": ["es6", "es7", "esnext", "dom"],
-    "sourceMap": true,
-    "allowJs": true,
     "jsx": "react",
     "moduleResolution": "node",
     "noImplicitReturns": true,
@@ -16,7 +14,9 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "downlevelIteration": true,
-    "noEmit": true
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "declarationDir": "dist"
   },
-  "include": ["src/**/*", "stories/**/*"]
+  "include": ["src/**/*"]
 }
