refactor: group hooks in a single file, move d.ts to typings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "downlevelIteration": true,
     "declaration": true,
     "emitDeclarationOnly": true,
-    "declarationDir": "dist"
+    "declarationDir": "dist/typings"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["dist"]
 }
