--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "build:lib": "rollup -c",
     "build:storybook": "build-storybook --output-dir example",
     "dev": "concurrently -k -r 'jest --watch' 'yarn run storybook'",
+    "docz:dev": "docz dev",
+    "docz:build": "docz build",
     "lint": "eslint . --ext js,ts,tsx",
+    "now-build": "docz build",
     "prepare": "yarn build",
     "pretty": "prettier '**/*.{js,ts,tsx,md,json,yml,html}' --write",
     "storybook": "start-storybook -p 9000",
@@ -107,11 +110,14 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@emotion/cache": "^10.0.0",
+    "@emotion/core": "^10.0.6",
+    "@emotion/styled-base": "^10.0.5",
     "@storybook/addon-actions": "^4.1.4",
     "@storybook/addon-options": "^4.1.4",
     "@storybook/react": "^4.1.4",
     "@types/jest": "^23.3.13",
-    "@types/react": "^16.7.20",
+    "@types/react": "^16.7.21",
     "@types/storybook__addon-actions": "^3.4.1",
     "@types/storybook__addon-links": "^3.3.3",
     "@types/storybook__react": "^4.0.0",
@@ -123,6 +129,8 @@
     "babel-loader": "^8.0.5",
     "concurrently": "4.1.0",
     "coveralls": "^3.0.2",
+    "docz": "^0.13.7",
+    "docz-theme-default": "^0.13.7",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
     "enzyme-to-json": "^3.3.5",
@@ -136,12 +144,13 @@
     "husky": "^1.3.1",
     "intersection-observer": "^0.5.1",
     "jest": "^24.0.0",
-    "jest-dom": "^3.0.0",
+    "jest-dom": "^3.0.1",
     "lint-staged": "^8.0.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.15.3",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
+    "react-spring": "^7.2.10",
     "react-test-renderer": "^16.8.0-alpha.1",
     "rollup": "^1.0.2",
     "rollup-plugin-babel": "^4.2.0",
@@ -151,5 +160,8 @@
     "rollup-plugin-uglify": "^6.0.2",
     "typescript": "^3.2.4",
     "typescript-eslint-parser": "^22.0.0"
+  },
+  "resolutions": {
+    "@types/react": "16.7.21"
   }
 }
