docs: work on the docz

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "docz:build": "docz build",
     "lint": "eslint . --ext js,ts,tsx",
     "now-build": "docz build",
-    "prepare": "yarn build",
+    "prepublish": "yarn build",
     "pretty": "prettier '**/*.{js,ts,tsx,md,json,yml,html}' --write",
     "storybook": "start-storybook -p 9000",
     "test": "jest"
@@ -129,8 +129,8 @@
     "babel-loader": "^8.0.5",
     "concurrently": "4.1.0",
     "coveralls": "^3.0.2",
-    "docz": "^0.13.7",
-    "docz-theme-default": "^0.13.7",
+    "docz": "0.13.7",
+    "docz-theme-default": "0.13.7",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
     "enzyme-to-json": "^3.3.5",
