Switch to Now and semantic release (#332)
* chore: switch to Now and semantic release

* docs: add status badge

--- a/package.json
+++ b/package.json
@@ -55,9 +55,25 @@
     "storybook:build": "build-storybook --output-dir example",
     "test": "jest"
   },
-  "np": {
-    "yarn": true,
-    "contents": "dist"
+  "release": {
+    "branches": [
+      "master",
+      {
+        "name": "beta",
+        "prerelease": true
+      }
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      [
+        "@semantic-release/npm",
+        {
+          "pkgRoot": "dist"
+        }
+      ],
+      "@semantic-release/github"
+    ]
   },
   "husky": {
     "hooks": {
