--- a/package.json
+++ b/package.json
@@ -126,10 +126,9 @@
     ]
   },
   "dependencies": {
-    "tiny-invariant": "^1.1.0"
   },
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0 || ^17.0.0"
+    "react": "^15.0.0 || ^16.0.0 || ^17.0.0|| ^17.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -172,9 +171,9 @@
     "lint-staged": "^10.1.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
-    "react": "^17.0.0-rc.0",
-    "react-dom": "^17.0.0-rc.0",
-    "react-test-renderer": "^17.0.0-rc.0",
+    "react": "^17.0.0-rc.1",
+    "react-dom": "^17.0.0-rc.1",
+    "react-test-renderer": "^17.0.0-rc.1",
     "rollup": "^2.6.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.0.1",
@@ -184,7 +183,7 @@
     "typescript": "^3.8.3"
   },
   "resolutions": {
-    "react": "17.0.0-rc.0",
-    "react-dom": "17.0.0-rc.0"
+    "react": "17.0.0-rc.1",
+    "react-dom": "17.0.0-rc.1"
   }
 }
