--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "react-intersection-observer",
   "version": "8.26.1",
   "description": "Monitor if a component is inside the viewport, using IntersectionObserver API",
-  "main": "react-intersection-observer.cjs.js",
-  "module": "react-intersection-observer.esm.js",
-  "unpkg": "react-intersection-observer.umd.min.js",
-  "typings": "index.d.ts",
+  "source": "src/index.tsx",
+  "main": "dist/react-intersection-observer.cjs.js",
+  "module": "dist/react-intersection-observer.m.js",
+  "esmodule": "dist/react-intersection-observer.esm.js",
+  "unpkg": "dist/react-intersection-observer.umd.min.js",
+  "typings": "dist/index.d.ts",
   "author": "Daniel Schmidt",
   "sideEffects": false,
   "repository": {
@@ -27,7 +29,6 @@
   ],
   "prettier": {
     "singleQuote": true,
-    "semi": false,
     "trailingComma": "all",
     "proseWrap": "always"
   },
@@ -43,8 +44,8 @@
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prebuild": "rm -rf dist lib",
     "build": "run-s build:*",
-    "build:lib": "rollup -c",
-    "build:ts": "tsc -p tsconfig.build.json && tsc -p tsconfig.test.json",
+    "build:bundle": "microbundle --name ReactIntersectionObserver --jsx React.createElement -f cjs,umd,es,modern --no-compress",
+    "build:utils": "tsc -p tsconfig.test.json",
     "build:copy": "node scripts/build-copy.js",
     "dev": "concurrently -k -r 'jest --watch' 'yarn run storybook'",
     "lint": "eslint . --ext js,ts,tsx",
@@ -125,8 +126,7 @@
       "jest-setup.js"
     ]
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0 || ^17.0.0|| ^17.0.0"
   },
@@ -169,17 +169,12 @@
     "intersection-observer": "^0.7.0",
     "jest": "^25.3.0",
     "lint-staged": "^10.1.3",
+    "microbundle": "^0.12.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "react": "^17.0.0-rc.1",
     "react-dom": "^17.0.0-rc.1",
     "react-test-renderer": "^17.0.0-rc.1",
-    "rollup": "^2.6.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.0.1",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-terser": "^5.3.0",
     "typescript": "^3.8.3"
   },
   "resolutions": {
