feat: modern rewrite (#370)

--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "react-intersection-observer",
   "version": "8.26.1",
   "description": "Monitor if a component is inside the viewport, using IntersectionObserver API",
-  "main": "react-intersection-observer.cjs.js",
-  "module": "react-intersection-observer.esm.js",
-  "unpkg": "react-intersection-observer.umd.min.js",
-  "typings": "index.d.ts",
+  "source": "src/index.tsx",
+  "main": "dist/react-intersection-observer.cjs.js",
+  "module": "dist/react-intersection-observer.m.js",
+  "esmodule": "dist/react-intersection-observer.esm.js",
+  "unpkg": "dist/react-intersection-observer.umd.min.js",
+  "typings": "dist/index.d.ts",
   "author": "Daniel Schmidt",
   "sideEffects": false,
   "repository": {
@@ -27,7 +29,6 @@
   ],
   "prettier": {
     "singleQuote": true,
-    "semi": false,
     "trailingComma": "all",
     "proseWrap": "always"
   },
@@ -43,8 +44,8 @@
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prebuild": "rm -rf dist lib",
     "build": "run-s build:*",
-    "build:lib": "rollup -c",
-    "build:ts": "tsc -p tsconfig.build.json && tsc -p tsconfig.test.json",
+    "build:bundle": "microbundle --name ReactIntersectionObserver --jsx React.createElement -f cjs,umd,es,modern --no-compress",
+    "build:utils": "tsc -p tsconfig.test.json",
     "build:copy": "node scripts/build-copy.js",
     "dev": "concurrently -k -r 'jest --watch' 'yarn run storybook'",
     "lint": "eslint . --ext js,ts,tsx",
@@ -125,66 +126,60 @@
       "jest-setup.js"
     ]
   },
-  "dependencies": {
-    "tiny-invariant": "^1.1.0"
-  },
+  "dependencies": {},
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0 || ^17.0.0"
+    "react": "^15.0.0 || ^16.0.0 || ^17.0.0|| ^17.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
+    "@babel/cli": "^7.11.5",
+    "@babel/core": "^7.11.5",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
     "@babel/preset-flow": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
-    "@emotion/react": "11.0.0-next.12",
-    "@storybook/addon-actions": "^6.0.13",
-    "@storybook/addon-viewport": "^6.0.13",
-    "@storybook/react": "^6.0.13",
-    "@storybook/theming": "^6.0.13",
+    "@emotion/react": "11.0.0-next.15",
+    "@storybook/addon-actions": "^6.0.21",
+    "@storybook/addon-viewport": "^6.0.21",
+    "@storybook/react": "^6.0.21",
+    "@storybook/theming": "^6.0.21",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.2",
-    "@types/jest": "^26.0.8",
-    "@types/react": "^16.9.34",
+    "@types/jest": "^26.0.12",
+    "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.6",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.3.0",
+    "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-dev-expression": "^0.2.2",
     "concurrently": "^5.1.0",
     "coveralls": "^3.0.11",
-    "eslint": "^6.8.0",
+    "eslint": "^7.8.0",
     "eslint-config-react-app": "^5.2.1",
-    "eslint-plugin-flowtype": "^4.7.0",
+    "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
-    "framer-motion": "^1.10.3",
+    "eslint-plugin-react-hooks": "^4.1.0",
+    "framer-motion": "^2.6.5",
     "husky": "^4.2.5",
-    "intersection-observer": "^0.7.0",
-    "jest": "^25.3.0",
+    "intersection-observer": "^0.11.0",
+    "jest": "^26.4.2",
     "lint-staged": "^10.1.3",
+    "microbundle": "^0.12.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
-    "react": "^17.0.0-rc.0",
-    "react-dom": "^17.0.0-rc.0",
-    "react-test-renderer": "^17.0.0-rc.0",
-    "rollup": "^2.6.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.0.1",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-terser": "^5.3.0",
-    "typescript": "^3.8.3"
+    "prettier-plugin-pkg": "^0.8.0",
+    "react": "^17.0.0-rc.1",
+    "react-dom": "^17.0.0-rc.1",
+    "react-test-renderer": "^17.0.0-rc.1",
+    "typescript": "^4.0.2"
   },
   "resolutions": {
-    "react": "17.0.0-rc.0",
-    "react-dom": "17.0.0-rc.0"
+    "react": "17.0.0-rc.1",
+    "react-dom": "17.0.0-rc.1"
   }
 }
