--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "8.26.1",
   "description": "Monitor if a component is inside the viewport, using IntersectionObserver API",
   "source": "src/index.tsx",
-  "main": "dist/react-intersection-observer.cjs.js",
+  "main": "dist/react-intersection-observer.js",
   "module": "dist/react-intersection-observer.m.js",
   "esmodule": "dist/react-intersection-observer.esm.js",
-  "unpkg": "dist/react-intersection-observer.umd.min.js",
+  "unpkg": "dist/react-intersection-observer.umd.js",
   "typings": "dist/index.d.ts",
   "author": "Daniel Schmidt",
   "sideEffects": false,
