fix: check intersectionRatio in addition to isIntersecting (#384)

--- a/package.json
+++ b/package.json
@@ -139,7 +139,8 @@
     "@babel/preset-flow": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
-    "@emotion/react": "11.0.0-next.15",
+    "@emotion/cache": "^11.0.0-next.16",
+    "@emotion/react": "^11.0.0-next.16",
     "@storybook/addon-actions": "^6.0.21",
     "@storybook/addon-viewport": "^6.0.21",
     "@storybook/react": "^6.0.21",
