--- a/package.json
+++ b/package.json
@@ -128,7 +128,7 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0 || ^17.0.0|| ^17.0.0"
+    "react": "^15.0.0 || ^16.0.0 || ^17.0.0|| ^18.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.5",
@@ -147,13 +147,13 @@
     "@storybook/theming": "^6.0.21",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^11.0.2",
-    "@types/jest": "^26.0.12",
+    "@types/jest": "^26.0.15",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.6",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.3.0",
+    "babel-jest": "^26.6.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-dev-expression": "^0.2.2",
     "concurrently": "^5.1.0",
@@ -163,24 +163,24 @@
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^4.1.0",
-    "framer-motion": "^2.6.10",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "framer-motion": "^2.9.3",
     "husky": "^4.2.5",
     "intersection-observer": "^0.11.0",
-    "jest": "^26.4.2",
+    "jest": "^26.6.0",
     "lint-staged": "^10.1.3",
     "microbundle": "^0.12.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "prettier-plugin-pkg": "^0.8.0",
-    "react": "^17.0.0-rc.3",
-    "react-dom": "^17.0.0-rc.3",
-    "react-test-renderer": "^17.0.0-rc.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-test-renderer": "^17.0.0",
     "typescript": "^4.0.2"
   },
   "resolutions": {
-    "react": "17.0.0-rc.3",
-    "react-dom": "17.0.0-rc.3"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   }
 }
