--- a/package.json
+++ b/package.json
@@ -131,34 +131,35 @@
     "react": "^15.0.0 || ^16.0.0 || ^17.0.0|| ^18.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.5",
-    "@babel/core": "^7.11.5",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/cli": "^7.12.8",
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-env": "^7.12.7",
     "@babel/preset-flow": "^7.9.0",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/preset-typescript": "^7.9.0",
-    "@emotion/cache": "^11.0.0-next.16",
-    "@emotion/react": "^11.0.0-next.16",
-    "@storybook/addon-actions": "^6.0.28",
-    "@storybook/addon-viewport": "^6.0.28",
-    "@storybook/react": "^6.0.28",
-    "@storybook/theming": "^6.0.28",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.0.2",
+    "@babel/preset-react": "^7.12.7",
+    "@babel/preset-typescript": "^7.12.7",
+    "@storybook/addon-actions": "^6.1.9",
+    "@storybook/addon-controls": "^6.1.9",
+    "@storybook/addon-docs": "^6.1.9",
+    "@storybook/addon-viewport": "^6.1.9",
+    "@storybook/react": "^6.1.9",
+    "@storybook/theming": "^6.1.9",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
     "@types/jest": "^26.0.15",
-    "@types/react": "^16.9.55",
-    "@types/react-dom": "^16.9.9",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "autoprefixer": "^9",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.2",
-    "babel-loader": "^8.1.0",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
     "babel-plugin-dev-expression": "^0.2.2",
     "concurrently": "^5.1.0",
     "coveralls": "^3.0.11",
-    "eslint": "^7.12.1",
+    "eslint": "^7.14.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.20.2",
@@ -168,16 +169,20 @@
     "framer-motion": "^2.9.4",
     "husky": "^4.2.5",
     "intersection-observer": "^0.11.0",
-    "jest": "^26.6.2",
-    "lint-staged": "^10.5.1",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.2",
     "microbundle": "^0.12.3",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.4",
+    "postcss": "^7",
+    "prettier": "^2.2.0",
     "prettier-plugin-pkg": "^0.8.0",
+    "prettier-plugin-tailwind": "^2.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-test-renderer": "^17.0.1",
-    "typescript": "^4.0.5"
+    "storybook-dark-mode": "^1.0.3",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "typescript": "^4.1.2"
   },
   "resolutions": {
     "react": "^17.0.1",
