--- a/package.json
+++ b/package.json
@@ -126,32 +126,33 @@
       "jest-setup.js"
     ]
   },
-  "dependencies": {},
+  "dependencies": {
+  },
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0 || ^17.0.0|| ^18.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.8",
-    "@babel/core": "^7.12.9",
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/preset-env": "^7.12.7",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@babel/preset-flow": "^7.9.0",
-    "@babel/preset-react": "^7.12.7",
+    "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
-    "@storybook/addon-actions": "^6.1.9",
-    "@storybook/addon-controls": "^6.1.9",
-    "@storybook/addon-docs": "^6.1.9",
-    "@storybook/addon-viewport": "^6.1.9",
-    "@storybook/react": "^6.1.9",
-    "@storybook/theming": "^6.1.9",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@types/jest": "^26.0.15",
+    "@storybook/addon-actions": "^6.1.14",
+    "@storybook/addon-controls": "^6.1.14",
+    "@storybook/addon-docs": "^6.1.14",
+    "@storybook/addon-viewport": "^6.1.14",
+    "@storybook/react": "^6.1.14",
+    "@storybook/theming": "^6.1.14",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@types/jest": "^26.0.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
     "autoprefixer": "^9",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
@@ -159,30 +160,30 @@
     "babel-plugin-dev-expression": "^0.2.2",
     "concurrently": "^5.1.0",
     "coveralls": "^3.0.11",
-    "eslint": "^7.14.0",
+    "eslint": "^7.18.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "framer-motion": "^2.9.4",
-    "husky": "^4.2.5",
-    "intersection-observer": "^0.11.0",
+    "framer-motion": "^3.2.1",
+    "husky": "^4.3.8",
+    "intersection-observer": "^0.12.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.2",
-    "microbundle": "^0.12.3",
+    "microbundle": "^0.13.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^7",
+    "postcss": "^7.0.35",
     "prettier": "^2.2.0",
     "prettier-plugin-pkg": "^0.8.0",
-    "prettier-plugin-tailwind": "^2.2.2",
+    "prettier-plugin-tailwind": "^2.2.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-test-renderer": "^17.0.1",
     "storybook-dark-mode": "^1.0.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.3"
   },
   "resolutions": {
     "react": "^17.0.1",
