feat: upgrade to React 18 (#538)

--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "webpack.config.js"
   ],
   "scripts": {
-    "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prebuild": "rm -rf dist lib",
     "build": "run-s build:*",
     "build:bundle": "microbundle --name ReactIntersectionObserver --jsx React.createElement -f cjs,umd,es,modern --no-compress",
@@ -76,15 +75,12 @@
       "@semantic-release/github"
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsc && lint-staged"
-    }
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
   },
   "lint-staged": {
     "*.{js,json,css,md,ts,tsx}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ],
     "src/**/*.{ts,tsx}": [
       "eslint",
@@ -126,66 +122,61 @@
       "jest-setup.js"
     ]
   },
-  "dependencies": {},
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0 || ^17.0.0|| ^18.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.15.0",
-    "@babel/helper-builder-react-jsx": "^7.14.5",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/preset-flow": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.15.0",
-    "@storybook/addon-actions": "^6.3.7",
-    "@storybook/addon-controls": "^6.3.7",
-    "@storybook/addon-docs": "^6.3.7",
-    "@storybook/addon-viewport": "^6.3.7",
-    "@storybook/builder-webpack5": "^6.3.7",
-    "@storybook/manager-webpack5": "^6.3.7",
-    "@storybook/react": "^6.3.7",
-    "@storybook/theming": "^6.3.7",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@types/jest": "^27.0.1",
-    "@types/react": "^17.0.17",
-    "@types/react-dom": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "autoprefixer": "^10.3.1",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.0.6",
-    "babel-loader": "^8.2.2",
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.9",
+    "@babel/helper-builder-react-jsx": "^7.16.7",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@storybook/addon-actions": "^6.4.21",
+    "@storybook/addon-controls": "^6.4.21",
+    "@storybook/addon-docs": "^6.4.21",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-viewport": "^6.4.21",
+    "@storybook/addons": "^6.4.21",
+    "@storybook/builder-webpack5": "^6.4.21",
+    "@storybook/manager-webpack5": "^6.4.21",
+    "@storybook/react": "^6.4.21",
+    "@storybook/theming": "^6.4.21",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.0.1",
+    "@types/jest": "^27.4.1",
+    "@types/react": "^18.0.2",
+    "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
+    "autoprefixer": "^10.4.4",
+    "babel-jest": "^27.5.1",
+    "babel-loader": "^8.2.4",
     "babel-plugin-dev-expression": "^0.2.2",
-    "concurrently": "^6.2.1",
-    "coveralls": "^3.1.1",
-    "eslint": "^8.2.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.24.0",
+    "concurrently": "^7.1.0",
+    "eslint": "^8.13.0",
+    "eslint-config-react-app": "^7.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "framer-motion": "^5.3.1",
-    "husky": "^4.3.8",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "framer-motion": "^6.2.9",
     "intersection-observer": "^0.12.0",
-    "jest": "^27.0.6",
-    "lint-staged": "^12.0.3",
+    "jest": "^27.5.1",
+    "lint-staged": "^12.3.7",
     "microbundle": "^0.14.2",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.3.6",
-    "postcss-loader": "^6.1.1",
-    "prettier": "^2.3.2",
-    "prettier-plugin-pkg": "^0.11.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-test-renderer": "^17.0.2",
-    "storybook-dark-mode": "^1.0.8",
-    "tailwindcss": "^2.2.7",
-    "typescript": "^4.3.5",
-    "webpack": "^5.50.0"
+    "postcss": "^8.4.12",
+    "prettier": "^2.6.2",
+    "prettier-plugin-pkg": "^0.13.0",
+    "prettier-plugin-tailwindcss": "^0.1.8",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "simple-git-hooks": "^2.7.0",
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.6.3",
+    "webpack": "^5.72.0"
   }
 }
