--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "build:bundle": "microbundle --name ReactIntersectionObserver --jsx React.createElement -f cjs,umd,es,modern --no-compress",
     "build:utils": "tsc -p tsconfig.test.json",
     "build:copy": "node scripts/build-copy.js",
+    "postbuild": "size-limit",
     "dev": "concurrently -k -r 'jest --watch' 'yarn run storybook'",
     "lint": "eslint . --ext js,ts,tsx",
     "release": "np --contents dist",
@@ -122,6 +123,26 @@
       "jest-setup.js"
     ]
   },
+  "size-limit": [
+    {
+      "path": "dist/react-intersection-observer.m.js",
+      "name": "InView",
+      "import": "{ InView }",
+      "limit": "1.8 kB"
+    },
+    {
+      "path": "dist/react-intersection-observer.m.js",
+      "name": "useInView",
+      "import": "{ useInView }",
+      "limit": "1.3 kB"
+    },
+    {
+      "path": "dist/react-intersection-observer.m.js",
+      "name": "observe",
+      "import": "{ observe }",
+      "limit": "1 kB"
+    }
+  ],
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0 || ^17.0.0|| ^18.0.0"
   },
@@ -134,6 +155,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@size-limit/preset-small-lib": "^7.0.8",
     "@storybook/addon-actions": "^6.4.21",
     "@storybook/addon-controls": "^6.4.21",
     "@storybook/addon-docs": "^6.4.21",
@@ -175,6 +197,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "simple-git-hooks": "^2.7.0",
+    "size-limit": "^7.0.8",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
     "webpack": "^5.72.0"
